# overline

./: .gitignore  Cargo.toml  README.md  README.qmd  input.geojson  minimal-example-input.geojson  minimal-example-output.geojson  output.geojson  overline-tests.R  references.bib  rnet_from_cyclestreets.geojson  route_segments_minimal.geojson
overline/: Cargo.toml  input.geojson
overline/src/: lib.rs  main.rs
rust/: Cargo.toml  README.md  viewer.html
rust/cli/: Cargo.toml
rust/cli/src/: main.rs
rust/overline/: Cargo.toml
rust/overline/src/: aggregation.rs  lib.rs
rust/tests/: Cargo.toml  atip_input.geojson  atip_output.geojson  build.rs  direction_input.geojson  direction_output.geojson
rust/tests/src/: lib.rs
test-data/: crossing-routes-minimal-leeds-output-rust.geojson  crossing-routes-minimal-leeds-output.geojson  crossing-routes-minimal-leeds.geojson  input-minimal.geojson  lines_with_overlaps_r_overline.geojson  lines_without_shared_vertices_overline_r.geojson  lines_without_shared_vertices_sf.geojson  minimal_2_lines.txt  output-minmal.geojson
