[package]
name = "overline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
geo = "0.24.1"
geojson = { version = "0.24.0", features = ["geo-types"] }
ordered-float = "3.6.0"
serde = { version = "1.0.159", features = ["derive"] }
